# pilota

./: Cargo.toml
example/: Cargo.toml  build.rs
example/idl/: model.thrift
example/src/: model.rs
pilota-build/src/: lib.rs
pilota-build/src/codegen/thrift/: mod.rs
pilota-build/src/middle/: context.rs
