[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
pilota-build = { path = "../pilota-build" }
pilota = { path = "../pilota" }
pilota-thrift-parser = { path = "../pilota-thrift-parser" }
